--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Home Property | Contact</title>
+  <title>Niks Home Property | Contact</title>
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -152,18 +152,16 @@
               <div class="aa-contact-top-left">
                 <iframe style="border-radius: 35px 0px; box-shadow: 0px 0px 15px 2px #000000b4;" width="95%"
                   height="450" frameborder="0" allowfullscreen="" style="border:0"
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6851.201919469417!2d-86.11773906635584!3d33.47324776828677!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x888bdb60cc49c571%3A0x40451ca6baf275c7!2s36008+AL-77%2C+Talladega%2C+AL+35160%2C+USA!5e0!3m2!1sbn!2sbd!4v1460452919256"></iframe>
+                  src="https://maps.google.com/maps?q=lovely%20professional%20university%20punjab&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" style="width: 590px; height: 400px;"></iframe>
               </div>
               <div style="border-radius: 35px 0px; box-shadow: 0px 0px 15px 2px #000000b4;"
                 class="aa-contact-top-right">
                 <h2>Contact</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae placeat aspernatur aperiam, quisquam
-                  voluptas enim tempore ab itaque nam modi eos corrupti distinctio nobis labore dolorum quae tenetur.
-                  Sapiente, sequi.</p>
+                <p>Near Lovely Professional University</p>
                 <ul class="contact-info-list">
-                  <li> <i class="fa fa-phone"></i> 1-700-564-6321</li>
-                  <li> <i class="fa fa-envelope-o"></i> info@homeproperty.com</li>
-                  <li> <i class="fa fa-map-marker"></i> 36008 AL-77, Talladega, AL 35160, USA</li>
+                  <li> <i class="fa fa-phone"></i> +91 99999 99999</li>
+                  <li> <i class="fa fa-envelope-o"></i> niksfakewebsite.com</li>
+                  <li> <i class="fa fa-map-marker"></i> Lovely Professional University, Phagwara, Punjab</li>
                 </ul>
               </div>
             </div>
@@ -215,7 +213,7 @@
             <div class="row">
               <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="aa-footer-left">
-                  <p>Designed by <a rel="nofollow" href="#">| Brightcode Company</a></p>
+                  <p>Designed by <a rel="nofollow" href="#">| Nikhilsoftwareboy Company</a></p>
                 </div>
               </div>
               <div class="col-md-3 col-sm-6 col-xs-12">
