--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <title>Home Property | Gallery</title>
+    <title>Niks Home Property | Gallery</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">   
@@ -54,10 +54,10 @@
                 <div class="aa-header-left">
                   <div class="aa-telephone-no">
                     <span class="fa fa-phone"></span>
-                    1-900-523-3564
+                    +91 99999 99999
                   </div>
                   <div class="aa-email hidden-xs">
-                    <span class="fa fa-envelope-o"></span> info@markups.com
+                    <span class="fa fa-envelope-o"></span> niksfakeemail@fake.com
                   </div>
                 </div>              
               </div>
@@ -146,7 +146,7 @@
             <div class="aa-title">
               <h2>Gallery View</h2>
               <span></span>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi commodi eum dolorem aut eos, debitis quaerat reiciendis, officiis consectetur ducimus atque suscipit ab at tempora!</p>
+               <p>Photos of Apartments and Flats</p>
             </div>
             <!-- Start gallery -->
             <div class="aa-gallery-content">
@@ -327,7 +327,7 @@
             <div class="row">
               <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="aa-footer-left">
-                  <p>Designed by <a rel="nofollow" href="#">| Brightcode Company</a></p>
+                  <p>Designed by <a rel="nofollow" href="#">| Nikhilsoftwareboy Company</a></p>
                 </div>
               </div>
               <div class="col-md-3 col-sm-6 col-xs-12">
@@ -335,7 +335,7 @@
                   <a href="#"><i class="fa fa-facebook"></i></a>
                   <a href="#"><i class="fa fa-twitter"></i></a>
                   <a href="#"><i class="fa fa-google-plus"></i></a>
-                  <a href="#"><i class="fa fa-youtube"></i></a>
+                  <a href="https://www.youtube.com/channel/UCSPYhW3-_xOPx2cXQTX1Ccg"><i class="fa fa-youtube"></i></a>
                 </div>
               </div>
               <div class="col-md-6 col-sm-12 col-xs-12">
